feat: create admins frontend page
